--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
+    "react-datepicker": "^8.4.0",
     "react-day-picker": "latest",
     "react-dom": "^19",
     "react-hook-form": "latest",
